--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,7 @@ flake8 = "*"
 django = "*"
 djangorestframework = "*"
 django-cors-headers = "*"
+unidecode = "*"
 
 [requires]
 python_version = "3.8"
