--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "vue": "^3.0.5",
+    "vue-i18n": "^9.0.0-rc.5",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
   },
