--- a/Pipfile
+++ b/Pipfile
@@ -8,7 +8,7 @@ autopep8 = "*"
 flake8 = "*"
 
 [packages]
-django = "*"
+django = "==3.1.14"
 djangorestframework = "*"
 django-cors-headers = "*"
 unidecode = "*"
